[gd_scene load_steps=2 format=3 uid="uid://c0pa43f05beuj"]

[ext_resource type="Script" path="res://scripts/user_interface/uiStorage.gd" id="1_gkjff"]

[node name="Storage" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(112, 28)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_gkjff")

[node name="Storage" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -148.0
offset_right = -8.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="Storage"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Storage/Scroll"]
layout_mode = 2

[node name="Inventory" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -148.0
offset_right = 192.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="Inventory"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/Scroll"]
layout_mode = 2

[node name="DescriptionPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 52.0
offset_right = 88.0
offset_bottom = 148.0
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="DescriptionPanel"]
layout_mode = 2
text = "This is the item description. FEAR IT'S GLORY!"

[node name="StatsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 148.0
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="StatsPanel"]
layout_mode = 2
text = "HP +100
VP +1
ACCURACY -100
and so on.."

[node name="Capacity" type="Label" parent="."]
layout_mode = 0
offset_left = -184.0
offset_top = 12.0
offset_right = 192.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "0/100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -192.0
offset_top = 28.0
offset_right = 192.0
offset_bottom = 46.0
placeholder_text = "Search item..."

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
